--- a/first-portfolio-workshop-2hr/index.html
+++ b/first-portfolio-workshop-2hr/index.html
@@ -428,14 +428,14 @@
 <li><code>style.css</code> ファイルに、以下のコードを追加してください。</li>
 </ol>
 <pre><code>body {
-  background-color: #f0f8ff; /* 背景色を薄い水色に */
+  background-color: #d0f0ff; /* 背景色を薄い水色に */
 }</code></pre>
 <ol type="1" start="2">
 <li>ファイルを保存しましょう。ブラウザの画面上に反映されましたか？</li>
 <li><code>background-color</code> の値を好きな色に変更してみましょう！色の名前やコードはこちらのサイトなどが参考になります: <a href="https://htmlcolorcodes.com/" target="_blank">HTML Color Codes</a></li>
 </ol>
 <aside class="special"><p><strong>補足:</strong> 色の表現方法</p>
-<p><code>#f0f8ff</code> は、2桁ごとに 16 進数を表しています。左から赤、緑、青の色の強さを表していて、00 ~ ff の 256 段階の強さがあります。</p>
+<p><code>#d0f0ff</code> は、2桁ごとに 16 進数を表しています。左から赤、緑、青の色の強さを表していて、00 ~ ff の 256 段階の強さがあります。</p>
 <ul>
 <li><code>#000000</code>: 黒色</li>
 <li><code>#cccccc</code>: 灰色</li>
@@ -452,7 +452,7 @@
 <li><code>style.css</code></li>
 </ul>
 <pre><code>body {
-  background-color: #f0f8ff; /* 背景色を薄い水色に */
+  background-color: #d0f0ff; /* 背景色を薄い水色に */
 }</code></pre>
 
 
@@ -480,7 +480,7 @@ p {
 <li><code>style.css</code></li>
 </ul>
 <pre><code>body {
-  background-color: #f0f8ff; /* 背景色を薄い水色に */
+  background-color: #d0f0ff; /* 背景色を薄い水色に */
 }
 
 h1 {
@@ -526,7 +526,7 @@ p {
 <li><code>style.css</code></li>
 </ul>
 <pre><code>body {
-  background-color: #f0f8ff; /* 背景色を薄い水色に */
+  background-color: #d0f0ff; /* 背景色を薄い水色に */
 }
 
 h1 {
