fix: 色の説明の誤りを修正

--- a/first-portfolio-workshop-2hr/index.html
+++ b/first-portfolio-workshop-2hr/index.html
@@ -468,7 +468,7 @@
 }
 
 p {
-  color: #2e86c1; /* 段落の文字色を濃い灰色に */
+  color: #2e86c1; /* 段落の文字色を青色に */
 }</code></pre>
 <ol type="1" start="2">
 <li>ファイルを保存しましょう。文字の色が変わりましたか？</li>
@@ -488,7 +488,7 @@ h1 {
 }
 
 p {
-  color: #2e86c1; /* 段落の文字色を濃い灰色に */
+  color: #2e86c1; /* 段落の文字色を青色に */
 }</code></pre>
 
 
@@ -534,7 +534,7 @@ h1 {
 }
 
 p {
-  color: #2e86c1; /* 段落の文字色を濃い灰色に */
+  color: #2e86c1; /* 段落の文字色を青色に */
 }
 
 body {
