fix: リンクのパスを修正

--- a/portfolio-2025/index.html
+++ b/portfolio-2025/index.html
@@ -9,8 +9,8 @@
   <title>ポートフォリオ Web サイト作成ワークショップ</title>
   <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro:400|Roboto:400,300,400italic,500,700|Roboto+Mono">
   <link rel="stylesheet" href="//fonts.googleapis.com/icon?family=Material+Icons">
-  <link rel="stylesheet" href="/libs/codelab-elements.css">
-  <link rel="stylesheet" href="/libs/prettify.css">
+  <link rel="stylesheet" href="libs/codelab-elements.css">
+  <link rel="stylesheet" href="libs/prettify.css">
   <style>
     .success {
       color: #1e8e3e;
@@ -706,10 +706,10 @@ body {
     });
   </script>
 
-  <script src="/libs/native-shim.js"></script>
-  <script src="/libs/custom-elements.min.js"></script>
-  <script src="/libs/prettify.js"></script>
-  <script src="/libs/codelab-elements.js"></script>
+  <script src="libs/native-shim.js"></script>
+  <script src="libs/custom-elements.min.js"></script>
+  <script src="libs/prettify.js"></script>
+  <script src="libs/codelab-elements.js"></script>
   <script src="//support.google.com/inapp/api.js"></script>
 </body>
 </html>
